fixes alignment of grid children

--- a/src/less/application-launcher.less
+++ b/src/less/application-launcher.less
@@ -34,7 +34,7 @@
   &-block-list {
     .applauncher-pf-item {
       @media (min-width: @screen-sm-min) {
-        flex:1 50%;
+        flex:0 0 50%;
       }
     }
 
